fix: align fun facts text to center for mobile view

--- a/css/main.css
+++ b/css/main.css
@@ -1011,6 +1011,7 @@ footer > p > span {
   }
   .fun-facts-box > p{
     margin: 16px;
+    text-align: center;
   }
   #i-do-title {
     mask-image: none;
